--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             <div class="notepad-icon">
                 <img src="/768818.png" alt="">
             </div>
-            <div class="outer-notepad-textarea">
+            <!-- <div class="outer-notepad-textarea " >
                 <div class="notepad-text">
                     <div class="note-left">
                         <h3>Note</h3>
                     </div>
-                    <div class="note-right">
+                    <div class="note-right " >
                         <button >
                             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -45,7 +45,7 @@
                 <div class="inner-notepad-textarea">
                     <textarea  id=""></textarea>
                 </div>
-            </div>
+            </div> -->
         </div>
 
     </div>
